<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">

    <!-- Welcome Text Container -->

    <LinearLayout
        android:id="@+id/welcomeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font2"
            android:gravity="center"
            android:text="Welcome to"
            android:textColor="@android:color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvSentio"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sentio!"
            android:fontFamily="@font/font2"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Login Box Container -->

    <LinearLayout
        android:id="@+id/LoginBox"
        android:layout_width="327dp"
        android:layout_height="291dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeContainer"
        app:layout_constraintVertical_bias="0.419">

        <EditText
            android:id="@+id/username"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/union"
            android:drawablePadding="5dp"
            android:drawableTint="#3F51B5"
            android:hint="Username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:drawableTint="#3F51B5"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FDBEA6"
            android:text="Login"
            android:textColor="#000000" />
        <!-- SignUp text -->
        <TextView
            android:id="@+id/tvSignUpPrompt"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Don't have an account? SignUp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottielogo"
        android:layout_width="245dp"
        android:layout_height="82dp"
        android:layout_gravity="top"
        android:layout_marginStart="83dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="83dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/lottielogo"
        android:elevation="5dp"
        app:lottie_loop="true"
        app:layout_constraintBottom_toTopOf="@+id/InformationBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeContainer"/>







</androidx.constraintlayout.widget.ConstraintLayout>