...
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <!-- Select an Emotional State -->
        <Spinner
            android:id="@+id/edit_mood_spinner"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:hint="Select Mood"
            android:background="@drawable/round_bg"
            android:layout_marginBottom="16dp"
...
        android:layout_height="wrap_content"
        android:maxLength="200"
        android:hint="Reason why for mood" />

    <!-- Select a social situation -->
    <Spinner
        android:id="@+id/edit_social_situation_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:hint="Social situation *"
        android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp" />
...
