...
    <item
        android:id="@+id/search"
        android:icon="@drawable/search3" />

    <item
        android:icon="@drawable/baseline_add_circle_outline_42"
        android:id="@+id/add" />

    <item
        android:icon="@drawable/following"
        android:id="@+id/following" />
    <item
        android:id="@+id/map"
...
