<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowingFragment"
    android:background="@color/white">



    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>


    <EditText
        android:id="@+id/search_mood_reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="🔍 Search by mood reason"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toStartOf="@id/mood_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <Spinner
        android:id="@+id/mood_filter"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:hint="Sort by emotional state"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_mood_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_mood_reason"
        app:layout_constraintTop_toTopOf="@+id/search_mood_reason" />


    <CheckBox
        android:id="@+id/show_past_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="Show mood events from past week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_mood_reason" />


    <ListView
        android:id="@+id/mood_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:divider="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/show_past_week"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>